--- a/combsort.html
+++ b/combsort.html
@@ -151,18 +151,9 @@
 							<li><a href="bubblesort.html">Bubblesort (Bolha)</a></li>
 							<li><a href="shakesort.html">ShakeSort (Troca Alternada)</a></li>
 							<li class="active"><a href="combsort.html">CombSort</a></li>
-							<li><a href="#">Link</a></li>
-							<li class="nav-header">Sidebar</li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li class="nav-header">Sidebar</li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
+							<li class="nav-header">Seleção</li>
+							<li><a href="selecao_direta.html">Direta</a></li>
+							
 						</ul>
 					</div><!--/.well -->
 				</div><!--/span-->
