Descrição do BubbleSort

--- a/bubblesort.html
+++ b/bubblesort.html
@@ -151,8 +151,18 @@
 				
 				<div class="span9">
 					<div class="hero-unit">
-						<h2>BubbleSort (Bolha)</h2>
-						<p>O algoritmo bubblesort é um algoritmo de ordenação do tipo Troca. Cada iteração do algoritmo compara o valor da posição atual com o valor da posição subsequente. Se o valor da posição atual for maior que o valor da posição subsequente, o algoritmo realizará a troca de valores. Caso contrário, os valores serão mantidos. O algoritmo segue para a posição seguinte, até atingir a última posição do vetor. Quando o algoritmo alcançar a última posição do vetor, a mesma estará preenchida com o valor do maior elemento do vetor, daí o nome de ordenação do tipo bolha. Então, o algoritmo retorna à primeira posição e reinicia as comparações. Quando o algoritmo percorrer todo o vetor e não houverem mais alterações a fazer, então o vetor estará ordenado.  </p>
+						<h2>BubbleSort (Método da Bolha)</h2>
+						<p>O método da bolha, conhecido como BubbleSort, é um algoritmo de ordenação baseado 
+						em trocas. É uma técnica de ordenação bastante conhecida e de fácil implentação e 
+						entendimento, porém, dependendo do caso, pode ser pouco eficiente. A cada passo, 
+						o algoritmo compara a posição atual do vetor com a posição seguinte. Se o valor da 
+						posição atual for maior do que o valor da posição seguinte, os valores serão trocados. 
+						Desta forma, ao término da primeira iteração, a última posição do vetor estará preenchida 
+						com o maior elemento de todo o vetor. As iterações são repetidas, de modo que ao término 
+						de cada iteração, os maiores elementos sejam delocados para as últimas posições do 
+						vetor. Devido a esta característica, este algoritmo recebeu o nome de BubbleSort (Método da Bolha). 
+						Quando não houverem mais trocas a realizar, o vetor estará ordenado corretamente. 
+						 </p>
 						<textarea cols="120" id="conjunto_original" style="width:100%">03; 07; 01; 09; 05</textarea>
 						<br/>
 						<input type="button" id="botao_proximo" value="passo a passo"/>
