descrição da seleção direta

--- a/selecao_direta.html
+++ b/selecao_direta.html
@@ -164,7 +164,7 @@
 				<div class="span9">
 					<div class="hero-unit">
 						<h2>Seleção Direta</h2>
-						<p>O algoritmo bubblesort é um algoritmo de ordenação do tipo Troca. Cada iteração do algoritmo compara o valor da posição atual com o valor da posição subsequente. Se o valor da posição atual for maior que o valor da posição subsequente, o algoritmo realizará a troca de valores. Caso contrário, os valores serão mantidos. O algoritmo segue para a posição seguinte, até atingir a última posição do vetor. Quando o algoritmo alcançar a última posição do vetor, a mesma estará preenchida com o valor do maior elemento do vetor, daí o nome de ordenação do tipo bolha. Então, o algoritmo retorna à primeira posição e reinicia as comparações. Quando o algoritmo percorrer todo o vetor e não houverem mais alterações a fazer, então o vetor estará ordenado.  </p>
+						<p>O algoritmo de ordenação de seleção direta se baseia em percorrer todo o vetor, a fim de encontrar o menor valor, e então movê-lo para a primeira posição. Em seguida, o algoritmo passa para a segunda posição e repete o procedimento, excluindo a posição anterior. Desta maneira, o segundo maior valor será movido para a segunda posição do vetor. O processo é repetido até que a última posição seja alcançada. Ao alcançar a última posição o vetor estará ordenado corretamente. Este é um algoritmo de fácil implementação, fácil entendimento e de velocidade constante, ou seja, sua performance não depende do grau de desordem do vetor a ser ordenado.   </p>
 						<textarea cols="120" id="conjunto_original" style="width:100%">03; 07; 01; 09; 05</textarea>
 						<br/>
 						<input type="button" id="botao_proximo" value="passo a passo"/>
