Descrição do QuickSort

--- a/combsort.html
+++ b/combsort.html
@@ -160,7 +160,7 @@
 				
 				<div class="span9">
 					<div class="hero-unit">
-						<h2>BubbleSort (Bolha)</h2>
+						<h2>CombSort</h2>
 						<p> O algortimo de ordenação CombSort é uma variação do BubbleSort. Um dos principais problemas do algoritmo BubbleSort é a presença de elementos "tartaruga". Estes elementos são chamados assim por que possuem valores maiores e estão localizados no início do vetor, de modo que serão necessárias várias comparações para serem deslocados até as posições finais do conjunto. O algoritmo CombSort resolve este problema utilizando grandes intervalos. Na nossa implementação, dado um vetor de tamanho N=5, a distância entre o elemento atual e o elemento a ser comparado será de N-1 = 4. Desta forma o algoritmo realizará as comparações até que o último elemento alvo atinja o final do conjunto. Em seguida a iteração é reinicidada, desta vez com um intervalo menor de comparação (N-1 = 3). As iterações continuam até que o intervalo seja igual a 2. Nesta situação o algoritmo se comportará da mesma maneira que o BubbleSort, porém, grande parte dos elementos "tartaruga" já estarão posicionados próximos ao final do vetor.   </p>
 						<textarea cols="120" id="conjunto_original" style="width:100%">03; 07; 01; 09; 05</textarea>
 						<br/>
