--- a/shakesort.html
+++ b/shakesort.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Bootstrap 101 Template</title>
+		<title>Algorítmos de ordenação</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -140,7 +140,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#">Pistaches</a>
+					<a class="brand" href="#">Pistaches - Algorítmos de Ordenação</a>
 				</div>
 			</div>
 		</div>
@@ -156,7 +156,8 @@
 							<li><a href="combsort.html">CombSort</a></li>
 							<li class="nav-header">Seleção</li>
 							<li><a href="selecao_direta.html">Direta</a></li>
-							
+							<li class="nav-header">Partição</li>
+							<li><a href="quick_sort.html">QuickSort</a></li>
 						</ul>
 					</div><!--/.well -->
 				</div><!--/span-->
@@ -180,7 +181,7 @@ O algoritmo ShakeSort, também conhecido como CocktailSort, opera de maneira sem
    			<hr>
 
 			<footer>
-				<p>&copy; Company 2013</p>
+				<p>&copy; Pistaches 2013</p>
 			</footer>
 		</div><!--/.fluid-container-->
 
