--- a/combsort.html
+++ b/combsort.html
@@ -147,6 +147,8 @@
 				<div class="span3">
 					<div class="well sidebar-nav">
 						<ul class="nav nav-list">
+							<li class="nav-header">SortJs</li>
+							<li><a href="index.html">Sobre o projeto</a></li>
 							<li class="nav-header">Troca</li>
 							<li><a href="bubblesort.html">Bubblesort (Bolha)</a></li>
 							<li><a href="shakesort.html">ShakeSort (Troca Alternada)</a></li>
